--- a/client-side/css/test.css
+++ b/client-side/css/test.css
@@ -69,6 +69,10 @@ html, body {
     color: #F3F3F3;
 }
 
+#srch-my-list {
+    display: none;
+}
+
 .add-btn-wrapper {
     width: 20px;
     height: 20px;
@@ -133,7 +137,7 @@ html, body {
 }
 
 #contacts-list {
-    max-height: calc(60% - 35px);
+    min-height: calc(60% - 35px);
     overflow: auto;
 }
 
