--- a/client-side/css/test.css
+++ b/client-side/css/test.css
@@ -53,6 +53,26 @@ html, body {
     border-radius: 3px;
 }
 
+.create-new-conversation-wrapper {
+    margin: 5px 7px 5px 0;
+}
+
+.create-new-conversation {
+    height: 26px;
+    width: 26px;
+
+    padding: 0;
+    border: 1px solid yellow;
+
+    background: url("../img/cross-icon-blue.png") no-repeat;
+    background-size: 26px 26px;
+
+    border-radius: 3px;
+
+    cursor: pointer;
+}
+
+
 #search-results {
     display: none;
 
@@ -231,8 +251,11 @@ html, body {
 .conversation-info {
     min-width: calc(100% - 43px);
 
-    margin: 3px 3px 3px 0;
+    margin: 3px 0 3px 3px;
     padding: 5px 10px;
+
+    display: flex;
+    align-items: center;
 
     color: white;
 }
@@ -463,4 +486,40 @@ button-wrapper {
 
     background-color: #3B3E47;
     border-radius: 3px;
+}
+
+#contact-list-modal {
+
+    /*display: none;*/
+
+    position: fixed;
+
+    left: 0;
+    top: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(200, 200, 200, 0.6);
+}
+
+#contact-list-content {
+
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+
+    width: 25%;
+    height: 70%;
+
+    transform: translate(-100%, -50%);
+
+    border-radius: 5px;
+
+    background-color: #474D5D;
+
+    display: flex;
+    flex-direction: column;
+
 }
