--- a/client-side/css/test.css
+++ b/client-side/css/test.css
@@ -37,7 +37,7 @@ html, body {
 }
 
 .search-input {
-    width: 100%;
+
     height: 26px;
 
     margin: 5px 7px 5px 7px;
@@ -53,19 +53,16 @@ html, body {
     border-radius: 3px;
 }
 
-.create-new-conversation-wrapper {
-    margin: 5px 7px 5px 0;
-}
-
 .create-new-conversation {
     height: 26px;
     width: 26px;
 
     padding: 0;
-    border: 1px solid yellow;
+    margin: 5px 7px 5px 0;
+    border: 0;
 
     background: url("../img/cross-icon-blue.png") no-repeat;
-    background-size: 26px 26px;
+    background-size: 100% 100%;
 
     border-radius: 3px;
 
@@ -173,6 +170,11 @@ html, body {
     cursor: pointer;
 }
 
+#conversation-list .list-row:hover {
+    background: darkseagreen;
+    cursor: pointer;
+}
+
 .contact-image {
     height: 44px;
     width: 44px;
@@ -242,10 +244,11 @@ html, body {
 
 #conversation-search {
     display: flex;
+    flex-direction: row;
 }
 
 #conversation-list {
-    height: 96%;
+    height: 100%;
 }
 
 .conversation-info {
@@ -267,13 +270,6 @@ html, body {
     padding: 5px 10px;
 
     color: white;
-}
-
-#conversation-list li {
-    list-style: none;
-    font-family: Lucida Connsole, monospace;
-
-    padding: 10px 10px;
 }
 
 #conversation-list li:hover {
@@ -490,7 +486,7 @@ button-wrapper {
 
 #contact-list-modal {
 
-    /*display: none;*/
+    display: none;
 
     position: fixed;
 
