--- a/client-side/css/test.css
+++ b/client-side/css/test.css
@@ -121,24 +121,37 @@ html, body {
     width: 25px;
     height: 25px;
 
-    margin-right: 3px;
+    /*margin-right: 3px;*/
 
     border-radius: 5px;
 
     align-self: center;
+
+    background-color: #4fb3c9;
 }
 
-.check-box-wrapper:hover {
+/*.check-box-wrapper:hover {
     background-color: #ccc;
-}
+}*/
 
-.check-box-contact {
+.input-box-contact {
+
+    display: none;
+
     width: 25px;
     height: 25px;
     background-color: #eee;
 
+    margin: 0;
+
     cursor: pointer;
+
 }
+
+input[type="checkbox"]:checked + div {
+    background-color: green;
+}
+
 
 .contacts-search-icon {
     margin: 5px 7px 5px 0;
